--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400&display=swap" rel="stylesheet">
 </head>
 <body>
-
-    <div class="container">
-        <div class="header-container">
-            <p class="heading">Yay It's Bogo</p>
+    <div class="main-container">
+        <div class="container">
+            <div class="header-container">
+                <p class="heading">Yay It's Bogo</p>
+            </div>
         </div>
+        <script src="script.js"></script>
     </div>
-    <script src="script.js"></script>
 
 </body>
 </html>
